# obs-quickshare

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
obs_quickshare/: __init__.py  cli.py  detect.py  drive.py  profile.py  scenes.py  share.py  shortcut.py  watcher.py
tests/: test_cli.py  test_detect.py  test_drive.py  test_profile.py  test_scenes.py  test_shortcut.py  test_watcher.py
