[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "obs-quickshare"
version = "0.1.0"
description = "One-click OBS recording workflow — the open-source Loom alternative"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
    "obs", "screen-recording", "loom-alternative", "async-video",
    "google-drive", "obsidian", "screencasting"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video :: Capture",
]
dependencies = [
    "watchdog>=4.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
obs-quickshare = "obs_quickshare.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/obs-quickshare"
"Bug Tracker" = "https://github.com/yourusername/obs-quickshare/issues"

[tool.hatch.build.targets.wheel]
packages = ["obs_quickshare"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
